📖 DOC: 👌 IMPROVE: Footer, Readme, link github

--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,7 @@
         <div><input  type="number" id="value1">=><input type="number" id="result1"></div>
         <div><input  type="number" id="value2">=><input type="number" disabled id="result2"></div>
     </section>
+    <footer><a target="_blank" href="https://github.com/DarthKenar/ReglaDe3">github</a></footer>
     <script src="./popup.js"></script>
 </body>
 </html>
