--- a/popup.html
+++ b/popup.html
@@ -1,18 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="popup.css">
-    <title>Regla de 3</title>
-</head>
-<body>
-    <section>
-        <header><span>REGLA DE 3</span><button id="clear"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg></button></header>
-        <div><input  type="number" id="value1">=><input type="number" id="result1"></div>
-        <div><input  type="number" id="value2">=><input type="number" disabled id="result2"></div>
-    </section>
-    <footer><a target="_blank" href="https://github.com/DarthKenar/ReglaDe3">github</a></footer>
-    <script src="./popup.js"></script>
-</body>
+<html lang="es">
+    <head>
+      <meta charset="utf-8">
+      <link rel="stylesheet" href="popup.css">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link
+          href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+          rel="stylesheet"
+      >
+    </head>
+    <body>
+        <nav class="accordion-container">
+            <section >
+                <header>
+                    <button class="background-none">
+                        <a href="https://github.com/DarthKenar" target="_blank" title="¿Sabías que los canarios negros no existen?">
+                            <svg fill="#000000" width="24px" height="24px" viewBox="0 0 256 256" id="Flat" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M176,72a16,16,0,1,1-16-16A16.00016,16.00016,0,0,1,176,72Zm68,8a11.998,11.998,0,0,1-5.34375,9.98438L220,102.42188V120A108.12217,108.12217,0,0,1,112,228H12a12,12,0,0,1-9.52344-19.30127L92,91.92969V76A64.01009,64.01009,0,0,1,216.5752,55.294l22.08105,14.72167A11.99924,11.99924,0,0,1,244,80Zm-33.63281,0-10.69043-7.12793a12.001,12.001,0,0,1-4.958-6.9668A40.00762,40.00762,0,0,0,116,76V96a11.9995,11.9995,0,0,1-2.47656,7.30127L36.32129,204H112a84.0953,84.0953,0,0,0,84-84V96a11.99859,11.99859,0,0,1,5.34375-9.98438Zm-81.7334,46.47656a11.99957,11.99957,0,0,0-16.82422,2.22266l-30.666,40a11.99989,11.99989,0,1,0,19.04688,14.60156l30.666-40A11.99975,11.99975,0,0,0,128.63379,126.47656Z"></path> </g></svg>
+                        </a>
+                    </button>
+                    <span>Regla de 3 - Simple</span>
+                    <button class="background-none" id="clear" title="Borrar números"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg></button>
+                </header>
+                <div class="pair-container"><input type="number" id="value1" placeholder="1° valor">=><input placeholder="del 1° valor" type="number" id="result1"></div>
+                <div class="pair-container"><input type="number" id="value2" placeholder="2° valor">=><input type="number" disabled id="result2" placeholder="?"></div>
+            </section>
+            <div class="main-item">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check-square"><polyline points="9 11 12 14 22 4"></polyline><path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"></path></svg>
+                Más extensiones
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="expand-icon"
+                    width="44"
+                    height="44"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    fill="none"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                >
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                    <path d="M9 6l6 6l-6 6" />
+                </svg>
+            </div>
+            <ul>
+                <li>
+                <div class="line-vertical"></div>
+                <div class="line-horizontal"></div>
+                <a href="https://chromewebstore.google.com/detail/regla-de-3/pjdhmokbkjedajookmkadhanpombpinb" title="Regla de 3" target="_blank">
+                    Regla de 3
+                </a>
+                </li>
+                <li>
+                <div class="line-vertical"></div>
+                <div class="line-horizontal"></div>
+                <a href="#próximamente" title="Promedio Simple">
+                    Promedio Simple (próximamente)
+                </a>
+                </li>
+                <li>
+                <div class="line-vertical"></div>
+                <div class="line-horizontal"></div>
+                <a href="#próximamente" title="Promedio Ponderado">
+                    Promedio Ponderado (próximamente)
+                </a>
+                </li>
+                <li>
+                <div class="line-vertical"></div>
+                <div class="line-horizontal"></div>
+                <a href='https://cafecito.app/darthkenar' rel='noopener' target='_blank'><img srcset='https://cdn.cafecito.app/imgs/buttons/button_1.png 1x, https://cdn.cafecito.app/imgs/buttons/button_1_2x.png 2x, https://cdn.cafecito.app/imgs/buttons/button_1_3.75x.png 3.75x' src='https://cdn.cafecito.app/imgs/buttons/button_1.png' alt='Invitame un café en cafecito.app' /></a>
+                </li>
+            </ul>
+        </nav>
+        <script src="./popup.js"></script>
+    </body>
 </html>
