🔨 Refactor Code:  Acomodados los links a las otras extensiones.

--- a/regla de 3 simple/popup.html
+++ b/regla de 3 simple/popup.html
@@ -46,31 +46,31 @@
             </div>
             <ul>
                 <li>
-                <div class="line-vertical"></div>
-                <div class="line-horizontal"></div>
-                <a href="https://chromewebstore.google.com/detail/regla-de-3/pjdhmokbkjedajookmkadhanpombpinb" title="Regla de 3" target="_blank">
-                    Regla de 3
-                </a>
-                </li>
-                <li>
-                <div class="line-vertical"></div>
-                <div class="line-horizontal"></div>
-                <a href="#próximamente" title="Promedio Simple">
-                    Promedio Simple (próximamente)
-                </a>
-                </li>
-                <li>
-                <div class="line-vertical"></div>
-                <div class="line-horizontal"></div>
-                <a href="#próximamente" title="Promedio Ponderado">
-                    Promedio Ponderado (próximamente)
-                </a>
-                </li>
-                <li>
-                <div class="line-vertical"></div>
-                <div class="line-horizontal"></div>
-                <a href='https://cafecito.app/darthkenar' rel='noopener' target='_blank'><img srcset='https://cdn.cafecito.app/imgs/buttons/button_1.png 1x, https://cdn.cafecito.app/imgs/buttons/button_1_2x.png 2x, https://cdn.cafecito.app/imgs/buttons/button_1_3.75x.png 3.75x' src='https://cdn.cafecito.app/imgs/buttons/button_1.png' alt='Invitame un café en cafecito.app' /></a>
-                </li>
+                    <div class="line-vertical"></div>
+                    <div class="line-horizontal"></div>
+                    <a href="https://chromewebstore.google.com/detail/pjdhmokbkjedajookmkadhanpombpinb" title="Regla de 3" target="_blank">
+                        Regla de 3
+                    </a>
+                    </li>
+                    <li>
+                    <div class="line-vertical"></div>
+                    <div class="line-horizontal"></div>
+                    <a href="https://chromewebstore.google.com/detail/anmkfmddehkanhkjoheklnkkhdinimkc" title="Promedio Simple" target="_blank">
+                        Promedio Simple
+                    </a>
+                    </li>
+                    <li>
+                    <div class="line-vertical"></div>
+                    <div class="line-horizontal"></div>
+                    <a href="https://f-vega.com" title="Promedio Ponderado" target="_blank">
+                        Promedio Ponderado (próximamente)
+                    </a>
+                    </li>
+                    <li>
+                    <div class="line-vertical"></div>
+                    <div class="line-horizontal"></div>
+                    <a href='https://cafecito.app/darthkenar' rel='noopener' target='_blank'><img srcset='https://cdn.cafecito.app/imgs/buttons/button_1.png 1x, https://cdn.cafecito.app/imgs/buttons/button_1_2x.png 2x, https://cdn.cafecito.app/imgs/buttons/button_1_3.75x.png 3.75x' src='https://cdn.cafecito.app/imgs/buttons/button_1.png' alt='Invitame un café en cafecito.app' /></a>
+                    </li>
             </ul>
         </nav>
         <script src="./popup.js"></script>
