--- a/promedio simple/popup.html
+++ b/promedio simple/popup.html
@@ -56,21 +56,21 @@
             <li>
             <div class="line-vertical"></div>
             <div class="line-horizontal"></div>
-            <a href="https://chromewebstore.google.com/detail/regla-de-3/pjdhmokbkjedajookmkadhanpombpinb" title="Regla de 3" target="_blank">
+            <a href="https://chromewebstore.google.com/detail/pjdhmokbkjedajookmkadhanpombpinb" title="Regla de 3" target="_blank">
                 Regla de 3
             </a>
             </li>
             <li>
             <div class="line-vertical"></div>
             <div class="line-horizontal"></div>
-            <a href="#próximamente" title="Promedio Simple">
+            <a href="https://chromewebstore.google.com/detail/anmkfmddehkanhkjoheklnkkhdinimkc" title="Promedio Simple" target="_blank">
                 Promedio Simple
             </a>
             </li>
             <li>
             <div class="line-vertical"></div>
             <div class="line-horizontal"></div>
-            <a href="#próximamente" title="Promedio Ponderado">
+            <a href="https://f-vega.com" title="Promedio Ponderado" target="_blank">
                 Promedio Ponderado (próximamente)
             </a>
             </li>
